@@ -1,3 +1,36 @@
 # PrisonMinePlugin
 
 I made a plugin that makes prison mines
+
+## Permissions
+
+### prisonmines.admin
+access to /mines 
+
+### prisonmines.admin.create
+access to /mines create 
+
+### prisonmines.admin.add
+access to /mines add
+
+### prisonmines.admin.remove
+access to /mines remove
+
+### prisonmines.admin.reset
+access to /mines reset
+
+### prisonmines.admin.resize
+access to /mines resize
+
+### prisonmines.admin.info
+access to /mines info
+
+### prisonmines.admin.list
+access to /mines list
+
+### prisonmines.admin.settings
+access to /mines settings
+
+### prisonmines.admin.rename
+access to /mines rename
+
