@@ -4,11 +4,13 @@ invalid-block: "That either an item (which cant be added to mines) or it doesnt 
 invalid-mine: "That mine doesnt exist"
 pick-another-name: "Mine %mine% already exists, choose another name"
 command-only-for-players: "This command is for players only"
+no-perms: "&cYou do not have permission to use this command."
 mine-created-success: "Mine %mine% created."
 block-add-success: "%mine% is now %percentfilled% of %block%. There is %percentleft% left to fill."
 block-remove-success: "%block% has been remove from %mine%. There is now %percentleft% left to fill"
 every-block-remove-success: "Everything has been removed from %mine%."
 mine-reset-success: "Mine %mine% has been reset."
+mine-rename-success: "Mine %oldname% has been renamed to %newname%"
 mine-reset-interval-change-success: "%mine% will now reset every %time% minute(s)"
 mine-reset-interval-disable-success: "The reset interval for %mine% has been disabled"
 mine-tp-location-change-success: "The teleport location of %mine% has been set at %x% %y% %z% in %world%"
