@@ -11,10 +11,11 @@
     some methods will get inspiration from Simplex Storage (576MB -> 44MB)
   - updated plugin to 1.17.1
 
+3α - 2/1/2022
+  - added /mines rename so you can rename mines
+
 TODO
  - add spigot support
- - add more permissions
- - add /mines rename <mine> <new name>
  - add /mines delete <mine>
    with something making the user to confirm it
  - add setting where you can reset the after a certain % has been mined
